# Distributed-Game-Server

./: Cargo.toml  README.md  build.rs  makefile  pyproject.toml  start.sh  test.sh  test.xt
.github/workflows/: rust.yml
client/: Cargo.toml  build.rs
client/src/: client.rs  main.rs
data/: peers.txt
game/: client.py  notes.txt  server.py
node/: Cargo.toml
node/src/: main.rs  raft.rs
node/src/raft/: node.rs  rpc.rs
node/src/raft/node/: funcs.rs  mod.rs
proto/: append_entries.proto  raft.proto  raftrpc.proto
src/: lib.rs  main.rs  makefile  raft.rs  server.rs  util.rs
src/client/: main.rs  mod.rs
src/digs/: main.rs  mod.rs
src/directory/: main.rs
src/game/: main.rs  mod.rs
src/node/: main.rs  mod.rs  rpc.rs  tests.rs
src/node/raft/: funcs.rs  mod.rs  tests.rs
src/raft/: log.rs  node.rs  rpc.rs
