[package]
name = "distributed_game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
local-ip-address = "0.4.9"
prost = "0.11.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.2"
public-ip = "0.2.2"
simplelog = "^0.7.6"

[build-dependencies]
tonic-build = "0.8.2"
