[package]
name = "digs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "node"
path = "src/node/main.rs"

[[bin]]
name = "directory"
path = "src/directory/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
local-ip-address = "0.4.9"
prost = "0.11.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.2"
public-ip = "0.2.2"
rand = "0.8.5"
rocket = "0.5.0-rc.2"
serde_json = "1.0.95"
reqwest = { version = "0.10.10", features = ["blocking"] }
json = "0.12.4"

[build-dependencies]
tonic-build = "0.8.2"
